Fixed stacking on h1 on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ html {
 }
 
 h1{
-  font: 200 5.5rem/3rem Martel Sans;
+  font: 200 5rem/5rem Martel Sans;
 }
 
 h2{
@@ -79,7 +79,8 @@ p{
   background-color: white;
   color: black;
   border: 0.2rem solid #006e6d;
-  border-radius: 0.4rem
+  border-radius: 0.4rem;
+  justify-content: center;
 }
 
 
